objects/Touchplan_Section_Field__c.object
<CustomObject>
    <fields>
        <fullName>Boolean_Pass_Fail_Criteria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean Pass/Fail Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Boolean_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Time_Pass_Fail_Criteria__c</fullName>
        <label>Date/Time Pass/Fail Criteria</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Time_Value__c</fullName>
        <label>Date/Time Value</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Evaluate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evaluate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Evaluation_Status__c</fullName>
        <label>Evaluation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_Order__c</fullName>
        <label>Field Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_Checklist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Checklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketo_Field_Mapping__c</fullName>
        <label>Marketo Field Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Pass_Fail_Criteria__c</fullName>
        <label>Number Pass/Fail Criteria</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Value__c</fullName>
        <label>Number Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pass_Fail_Operator__c</fullName>
        <label>Pass/Fail Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>=</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>Contains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesforce_Data_Source__c</fullName>
        <label>Salesforce Data Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>String_Pass_Fail_Criteria__c</fullName>
        <label>String Pass/Fail Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>String_Value__c</fullName>
        <label>String Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_ID__c</fullName>
        <label>Template ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Touchplan_Section__c</fullName>
        <label>Touchplan Section</label>
        <referenceTo>Touchplan_Section__c</referenceTo>
        <relationshipLabel>Touchplan Section Fields</relationshipLabel>
        <relationshipName>Touchplan_Section_Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Touchplan Section Field</label>
    <nameField>
        <label>Touchplan Section Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Touchplan Section Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <recordTypes>
        <fullName>Boolean</fullName>
        <active>true</active>
        <label>Boolean</label>
    </recordTypes>
    <recordTypes>
        <fullName>Date_Time</fullName>
        <active>true</active>
        <label>Date/Time</label>
    </recordTypes>
    <recordTypes>
        <fullName>Number</fullName>
        <active>true</active>
        <label>Number</label>
    </recordTypes>
    <recordTypes>
        <fullName>String</fullName>
        <active>true</active>
        <label>String</label>
    </recordTypes>
</CustomObject>